replaced sass vars with css vars and added default themes

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,6 +1,6 @@
 @import "../utilities/mixins"
 
-$body-background-color: $scheme-main !default
+$body-background-color: var(--scheme-main) !default
 $body-size: 16px !default
 $body-min-width: 300px !default
 $body-rendering: optimizeLegibility !default
@@ -8,7 +8,7 @@ $body-family: $family-primary !default
 $body-overflow-x: hidden !default
 $body-overflow-y: scroll !default
 
-$body-color: $text !default
+$body-color: var(--text) !default
 $body-font-size: 1em !default
 $body-weight: $weight-normal !default
 $body-line-height: 1.5 !default
@@ -20,11 +20,11 @@ $code-size: 0.875em !default
 
 $small-font-size: 0.875em !default
 
-$hr-background-color: $background !default
+$hr-background-color: var(--background) !default
 $hr-height: 2px !default
 $hr-margin: 1.5rem 0 !default
 
-$strong-color: $text-strong !default
+$strong-color: var(--text-strong) !default
 $strong-weight: $weight-bold !default
 
 $pre-font-size: 0.875em !default
@@ -74,17 +74,17 @@ body
 // Inline
 
 a
-  color: $link
+  color: var(--link)
   cursor: pointer
   text-decoration: none
   strong
     color: currentColor
   &:hover
-    color: $link-hover
+    color: var(--link-hover)
 
 code
-  background-color: $code-background
-  color: $code
+  background-color: var(--code-background)
+  color: var(--code)
   font-size: $code-size
   font-weight: $code-weight
   padding: $code-padding
@@ -122,8 +122,8 @@ fieldset
 
 pre
   +overflow-touch
-  background-color: $pre-background
-  color: $pre
+  background-color: var(--pre-background)
+  color: var(--pre)
   font-size: $pre-font-size
   overflow-x: auto
   padding: $pre-padding
@@ -142,4 +142,4 @@ table
     &:not([align])
       text-align: inherit
   th
-    color: $text-strong
+    color: var(--text-strong)
