--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -2,22 +2,22 @@
 
 $dropdown-menu-min-width: 12rem !default
 
-$dropdown-content-background-color: $scheme-main !default
-$dropdown-content-arrow: $link !default
+$dropdown-content-background-color: var(--scheme-main) !default
+$dropdown-content-arrow: var(--link) !default
 $dropdown-content-offset: 4px !default
 $dropdown-content-padding-bottom: 0.5rem !default
 $dropdown-content-padding-top: 0.5rem !default
 $dropdown-content-radius: $radius !default
-$dropdown-content-shadow: $shadow !default
+$dropdown-content-shadow: var(--shadow) !default
 $dropdown-content-z: 20 !default
 
-$dropdown-item-color: $text !default
-$dropdown-item-hover-color: $scheme-invert !default
-$dropdown-item-hover-background-color: $background !default
-$dropdown-item-active-color: $link-invert !default
-$dropdown-item-active-background-color: $link !default
+$dropdown-item-color: var(--text) !default
+$dropdown-item-hover-color: var(--scheme-invert) !default
+$dropdown-item-hover-background-color: var(--background) !default
+$dropdown-item-active-color: var(--link-invert) !default
+$dropdown-item-active-background-color: var(--link) !default
 
-$dropdown-divider-background-color: $border-light !default
+$dropdown-divider-background-color: var(--border-light) !default
 
 .dropdown
   display: inline-flex
