--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -1,6 +1,6 @@
 @import "../utilities/mixins"
 
-$media-border-color: bulmaRgba($border, 0.5) !default
+$media-border-color: rgba(var(--border), 0.5) !default
 $media-border-size: 1px !default
 $media-spacing: 1rem !default
 $media-spacing-large: 1.5rem !default
