--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -1,19 +1,19 @@
 @import "../utilities/mixins"
 
-$menu-item-color: $text !default
+$menu-item-color: var(--text) !default
 $menu-item-radius: $radius-small !default
-$menu-item-hover-color: $text-strong !default
-$menu-item-hover-background-color: $background !default
-$menu-item-active-color: $link-invert !default
-$menu-item-active-background-color: $link !default
+$menu-item-hover-color: var(--text-strong) !default
+$menu-item-hover-background-color: var(--background) !default
+$menu-item-active-color: var(--link-invert) !default
+$menu-item-active-background-color: var(--link) !default
 
-$menu-list-border-left: 1px solid $border !default
+$menu-list-border-left: 1px solid var(--border) !default
 $menu-list-line-height: 1.25 !default
 $menu-list-link-padding: 0.5em 0.75em !default
 $menu-nested-list-margin: 0.75em !default
 $menu-nested-list-padding-left: 0.75em !default
 
-$menu-label-color: $text-light !default
+$menu-label-color: var(--text-light) !default
 $menu-label-font-size: 0.75em !default
 $menu-label-letter-spacing: 0.1em !default
 $menu-label-spacing: 1em !default
