--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -2,7 +2,7 @@
 
 $modal-z: 40 !default
 
-$modal-background-background-color: bulmaRgba($scheme-invert, 0.86) !default
+$modal-background-background-color: rgba(var(--scheme-invert), 0.86) !default
 
 $modal-content-width: 640px !default
 $modal-content-margin-mobile: 20px !default
@@ -15,19 +15,19 @@ $modal-close-top: 20px !default
 
 $modal-card-spacing: 40px !default
 
-$modal-card-head-background-color: $background !default
-$modal-card-head-border-bottom: 1px solid $border !default
+$modal-card-head-background-color: var(--background) !default
+$modal-card-head-border-bottom: 1px solid var(--border) !default
 $modal-card-head-padding: 20px !default
 $modal-card-head-radius: $radius-large !default
 
-$modal-card-title-color: $text-strong !default
+$modal-card-title-color: var(--text-strong) !default
 $modal-card-title-line-height: 1 !default
 $modal-card-title-size: $size-4 !default
 
 $modal-card-foot-radius: $radius-large !default
-$modal-card-foot-border-top: 1px solid $border !default
+$modal-card-foot-border-top: 1px solid var(--border) !default
 
-$modal-card-body-background-color: $scheme-main !default
+$modal-card-body-background-color: var(--scheme-main) !default
 $modal-card-body-padding: 20px !default
 
 $modal-breakpoint: $tablet !default
