--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -1,8 +1,8 @@
 @import "../utilities/controls"
 @import "../utilities/mixins"
 
-$pagination-color: $text-strong !default
-$pagination-border-color: $border !default
+$pagination-color: var(--text-strong) !default
+$pagination-border-color: var(--border) !default
 $pagination-margin: -0.25rem !default
 $pagination-min-width: $control-height !default
 
@@ -14,26 +14,26 @@ $pagination-item-padding-right: 0.5em !default
 $pagination-nav-padding-left: 0.75em !default
 $pagination-nav-padding-right: 0.75em !default
 
-$pagination-hover-color: $link-hover !default
-$pagination-hover-border-color: $link-hover-border !default
+$pagination-hover-color: var(--link-hover) !default
+$pagination-hover-border-color: var(--link-hover-border) !default
 
-$pagination-focus-color: $link-focus !default
-$pagination-focus-border-color: $link-focus-border !default
+$pagination-focus-color: var(--link-focus) !default
+$pagination-focus-border-color: var(--link-focus-border) !default
 
-$pagination-active-color: $link-active !default
-$pagination-active-border-color: $link-active-border !default
+$pagination-active-color: var(--link-active) !default
+$pagination-active-border-color: var(--link-active-border) !default
 
-$pagination-disabled-color: $text-light !default
-$pagination-disabled-background-color: $border !default
-$pagination-disabled-border-color: $border !default
+$pagination-disabled-color: var(--text-light) !default
+$pagination-disabled-background-color: var(--border) !default
+$pagination-disabled-border-color: var(--border) !default
 
-$pagination-current-color: $link-invert !default
-$pagination-current-background-color: $link !default
-$pagination-current-border-color: $link !default
+$pagination-current-color: var(--link-invert) !default
+$pagination-current-background-color: var(--link) !default
+$pagination-current-border-color: var(--link) !default
 
-$pagination-ellipsis-color: $grey-light !default
+$pagination-ellipsis-color: var(--grey-light) !default
 
-$pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default
+$pagination-shadow-inset: inset 0 1px 2px rgba(var(--scheme-invert), 0.2) !default
 
 .pagination
   @extend %block
