--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,12 +1,12 @@
 @import "../utilities/mixins"
 
 $panel-margin: $block-spacing !default
-$panel-item-border: 1px solid $border-light !default
+$panel-item-border: 1px solid var(--border-light) !default
 $panel-radius: $radius-large !default
-$panel-shadow: $shadow !default
+$panel-shadow: var(--shadow) !default
 
-$panel-heading-background-color: $border-light !default
-$panel-heading-color: $text-strong !default
+$panel-heading-background-color: var(--border-light) !default
+$panel-heading-color: var(--text-strong) !default
 $panel-heading-line-height: 1.25 !default
 $panel-heading-padding: 0.75em 1em !default
 $panel-heading-radius: $radius !default
@@ -14,20 +14,20 @@ $panel-heading-size: 1.25em !default
 $panel-heading-weight: $weight-bold !default
 
 $panel-tabs-font-size: 0.875em !default
-$panel-tab-border-bottom: 1px solid $border !default
-$panel-tab-active-border-bottom-color: $link-active-border !default
-$panel-tab-active-color: $link-active !default
+$panel-tab-border-bottom: 1px solid var(--border) !default
+$panel-tab-active-border-bottom-color: var(--link-active-border) !default
+$panel-tab-active-color: var(--link-active) !default
 
-$panel-list-item-color: $text !default
-$panel-list-item-hover-color: $link !default
+$panel-list-item-color: var(--text) !default
+$panel-list-item-hover-color: var(--link) !default
 
-$panel-block-color: $text-strong !default
-$panel-block-hover-background-color: $background !default
-$panel-block-active-border-left-color: $link !default
-$panel-block-active-color: $link-active !default
-$panel-block-active-icon-color: $link !default
+$panel-block-color: var(--text-strong) !default
+$panel-block-hover-background-color: var(--background) !default
+$panel-block-active-border-left-color: var(--link) !default
+$panel-block-active-color: var(--link-active) !default
+$panel-block-active-icon-color: var(--link) !default
 
-$panel-icon-color: $text-light !default
+$panel-icon-color: var(--text-light) !default
 $panel-colors: $colors !default
 
 .panel
