--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,47 +1,47 @@
 @import "../utilities/controls"
 @import "../utilities/mixins"
 
-$button-color: $text-strong !default
-$button-background-color: $scheme-main !default
+$button-color: var(--text-strong) !default
+$button-background-color: var(--scheme-main) !default
 $button-family: false !default
 
-$button-border-color: $border !default
+$button-border-color: var(--border) !default
 $button-border-width: $control-border-width !default
 
 $button-padding-vertical: calc(0.5em - #{$button-border-width}) !default
 $button-padding-horizontal: 1em !default
 
-$button-hover-color: $link-hover !default
-$button-hover-border-color: $link-hover-border !default
+$button-hover-color: var(--link-hover) !default
+$button-hover-border-color: var(--link-hover-border) !default
 
-$button-focus-color: $link-focus !default
-$button-focus-border-color: $link-focus-border !default
+$button-focus-color: var(--link-focus) !default
+$button-focus-border-color: var(--link-focus-border) !default
 $button-focus-box-shadow-size: 0 0 0 0.125em !default
-$button-focus-box-shadow-color: bulmaRgba($link, 0.25) !default
+$button-focus-box-shadow-color: rgba(var(--link), 0.25) !default
 
-$button-active-color: $link-active !default
-$button-active-border-color: $link-active-border !default
+$button-active-color: var(--link-active) !default
+$button-active-border-color: var(--link-active-border) !default
 
-$button-text-color: $text !default
+$button-text-color: var(--text) !default
 $button-text-decoration: underline !default
-$button-text-hover-background-color: $background !default
-$button-text-hover-color: $text-strong !default
+$button-text-hover-background-color: var(--background) !default
+$button-text-hover-color: var(--text-strong) !default
 
 $button-ghost-background: none !default
 $button-ghost-border-color: transparent !default
-$button-ghost-color: $link !default
+$button-ghost-color: var(--link) !default
 $button-ghost-decoration: none !default
-$button-ghost-hover-color: $link !default
+$button-ghost-hover-color: var(--link) !default
 $button-ghost-hover-decoration: underline !default
 
-$button-disabled-background-color: $scheme-main !default
-$button-disabled-border-color: $border !default
+$button-disabled-background-color: var(--scheme-main) !default
+$button-disabled-border-color: var(--border) !default
 $button-disabled-shadow: none !default
 $button-disabled-opacity: 0.5 !default
 
-$button-static-color: $text-light !default
-$button-static-background-color: $scheme-main-ter !default
-$button-static-border-color: $border !default
+$button-static-color: var(--text-light) !default
+$button-static-background-color: var(--scheme-main-ter) !default
+$button-static-border-color: var(--border) !default
 
 $button-colors: $colors !default
 $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": ($size-small * 0.875), "medium": $size-small, "large": $size-normal), "tablet-only": ("small": ($size-small * 0.875), "normal": ($size-small), "medium": $size-normal, "large": $size-medium)) !default
