--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,26 +1,26 @@
 @import "../utilities/mixins"
 
-$content-heading-color: $text-strong !default
+$content-heading-color: var(--text-strong) !default
 $content-heading-weight: $weight-semibold !default
 $content-heading-line-height: 1.125 !default
 
 $content-block-margin-bottom: 1em !default
 
-$content-blockquote-background-color: $background !default
-$content-blockquote-border-left: 5px solid $border !default
+$content-blockquote-background-color: var(--background) !default
+$content-blockquote-border-left: 5px solid var(--border) !default
 $content-blockquote-padding: 1.25em 1.5em !default
 
 $content-pre-padding: 1.25em 1.5em !default
 
-$content-table-cell-border: 1px solid $border !default
+$content-table-cell-border: 1px solid var(--border) !default
 $content-table-cell-border-width: 0 0 1px !default
 $content-table-cell-padding: 0.5em 0.75em !default
-$content-table-cell-heading-color: $text-strong !default
+$content-table-cell-heading-color: var(--text-strong) !default
 $content-table-head-cell-border-width: 0 0 2px !default
-$content-table-head-cell-color: $text-strong !default
+$content-table-head-cell-color: var(--text-strong) !default
 $content-table-body-last-row-cell-border-bottom-width: 0 !default
 $content-table-foot-cell-border-width: 2px 0 0 !default
-$content-table-foot-cell-color: $text-strong !default
+$content-table-foot-cell-color: var(--text-strong) !default
 
 .content
   @extend %block
