--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -18,7 +18,7 @@
 
 .number
   align-items: center
-  background-color: $background
+  background-color: var(--background)
   border-radius: $radius-rounded
   display: inline-flex
   font-size: $size-medium
