--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,7 +1,7 @@
 @import "../utilities/mixins"
 
-$progress-bar-background-color: $border-light !default
-$progress-value-background-color: $text !default
+$progress-bar-background-color: var(--border-light) !default
+$progress-value-background-color: var(--text) !default
 $progress-border-radius: $radius-rounded !default
 
 $progress-indeterminate-duration: 1.5s !default
@@ -47,7 +47,7 @@ $progress-colors: $colors !default
     animation-name: moveIndeterminate
     animation-timing-function: linear
     background-color: $progress-bar-background-color
-    background-image: linear-gradient(to right, $text 30%, $progress-bar-background-color 30%)
+    background-image: linear-gradient(to right, var(--text) 30%, $progress-bar-background-color 30%)
     background-position: top left
     background-repeat: no-repeat
     background-size: 150% 150%
