--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -1,29 +1,29 @@
 @import "../utilities/mixins"
 
-$table-color: $text-strong !default
-$table-background-color: $scheme-main !default
+$table-color: var(--text-strong) !default
+$table-background-color: var(--scheme-main) !default
 
-$table-cell-border: 1px solid $border !default
+$table-cell-border: 1px solid var(--border) !default
 $table-cell-border-width: 0 0 1px !default
 $table-cell-padding: 0.5em 0.75em !default
-$table-cell-heading-color: $text-strong !default
+$table-cell-heading-color: var(--text-strong) !default
 
 $table-head-cell-border-width: 0 0 2px !default
-$table-head-cell-color: $text-strong !default
+$table-head-cell-color: var(--text-strong) !default
 $table-foot-cell-border-width: 2px 0 0 !default
-$table-foot-cell-color: $text-strong !default
+$table-foot-cell-color: var(--text-strong) !default
 
 $table-head-background-color: transparent !default
 $table-body-background-color: transparent !default
 $table-foot-background-color: transparent !default
 
-$table-row-hover-background-color: $scheme-main-bis !default
+$table-row-hover-background-color: var(--scheme-main-bis) !default
 
-$table-row-active-background-color: $primary !default
-$table-row-active-color: $primary-invert !default
+$table-row-active-background-color: var(--primary) !default
+$table-row-active-color: var(--primary-invert) !default
 
-$table-striped-row-even-background-color: $scheme-main-bis !default
-$table-striped-row-even-hover-background-color: $scheme-main-ter !default
+$table-striped-row-even-background-color: var(--scheme-main-bis) !default
+$table-striped-row-even-hover-background-color: var(--scheme-main-ter) !default
 
 $table-colors: $colors !default
 
