--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -1,7 +1,7 @@
 @import "../utilities/mixins"
 
-$tag-background-color: $background !default
-$tag-color: $text !default
+$tag-background-color: var(--background) !default
+$tag-color: var(--text) !default
 $tag-radius: $radius !default
 $tag-delete-margin: 1px !default
 
@@ -129,9 +129,9 @@ $tag-colors: $colors !default
       width: 1px
     &:hover,
     &:focus
-      background-color: darken($tag-background-color, 5%)
+      // background-color: darken($tag-background-color, 5%)
     &:active
-      background-color: darken($tag-background-color, 10%)
+      // background-color: darken($tag-background-color, 10%)
   &.is-rounded
     border-radius: $radius-rounded
 
