--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,6 +1,6 @@
 @import "../utilities/mixins"
 
-$title-color: $text-strong !default
+$title-color: var(--text-strong) !default
 $title-family: false !default
 $title-size: $size-3 !default
 $title-weight: $weight-semibold !default
@@ -10,12 +10,12 @@ $title-strong-weight: inherit !default
 $title-sub-size: 0.75em !default
 $title-sup-size: 0.75em !default
 
-$subtitle-color: $text !default
+$subtitle-color: var(--text) !default
 $subtitle-family: false !default
 $subtitle-size: $size-5 !default
 $subtitle-weight: $weight-normal !default
 $subtitle-line-height: 1.25 !default
-$subtitle-strong-color: $text-strong !default
+$subtitle-strong-color: var(--text-strong) !default
 $subtitle-strong-weight: $weight-semibold !default
 $subtitle-negative-margin: -1.25rem !default
 
