--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -1,12 +1,12 @@
-$file-border-color: $border !default
+$file-border-color: var(--border) !default
 $file-radius: $radius !default
 
-$file-cta-background-color: $scheme-main-ter !default
-$file-cta-color: $text !default
-$file-cta-hover-color: $text-strong !default
-$file-cta-active-color: $text-strong !default
+$file-cta-background-color: var(--scheme-main-ter) !default
+$file-cta-color: var(--text) !default
+$file-cta-hover-color: var(--text-strong) !default
+$file-cta-active-color: var(--text-strong) !default
 
-$file-name-border-color: $border !default
+$file-name-border-color: var(--border) !default
 $file-name-border-style: solid !default
 $file-name-border-width: 1px 1px 1px 0 !default
 $file-name-max-width: 16em !default
