--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -1,4 +1,4 @@
-$label-color: $text-strong !default
+$label-color: var(--text-strong) !default
 $label-weight: $weight-bold !default
 
 $help-size: $size-small !default
