--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -63,7 +63,7 @@ $hero-colors: $colors !default
           a
             color: $color-invert
             &:hover
-              background-color: bulmaRgba($scheme-invert, 0.1)
+              background-color: rgba(var(--scheme-invert), 0.1)
           li.is-active a
             &,
             &:hover
