--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -1,28 +1,28 @@
 // Colors
 
-$black:        hsl(0, 0%, 4%) !default
-$black-bis:    hsl(0, 0%, 7%) !default
-$black-ter:    hsl(0, 0%, 14%) !default
+$black:         hsl(0, 0%, 4%) !default
+$black-bis:     hsl(0, 0%, 7%) !default
+$black-ter:     hsl(0, 0%, 14%) !default
 
-$grey-darker:  hsl(0, 0%, 21%) !default
-$grey-dark:    hsl(0, 0%, 29%) !default
-$grey:         hsl(0, 0%, 48%) !default
-$grey-light:   hsl(0, 0%, 71%) !default
-$grey-lighter: hsl(0, 0%, 86%) !default
+$grey-darker:   hsl(0, 0%, 21%) !default
+$grey-dark:     hsl(0, 0%, 29%) !default
+$grey:          hsl(0, 0%, 48%) !default
+$grey-light:    hsl(0, 0%, 71%) !default
+$grey-lighter:  hsl(0, 0%, 86%) !default
 $grey-lightest: hsl(0, 0%, 93%) !default
 
-$white-ter:    hsl(0, 0%, 96%) !default
-$white-bis:    hsl(0, 0%, 98%) !default
-$white:        hsl(0, 0%, 100%) !default
+$white-ter:     hsl(0, 0%, 96%) !default
+$white-bis:     hsl(0, 0%, 98%) !default
+$white:         hsl(0, 0%, 100%) !default
 
-$orange:       hsl(14,  100%, 53%) !default
-$yellow:       hsl(44,  100%, 77%) !default
-$green:        hsl(153, 53%,  53%) !default
-$turquoise:    hsl(171, 100%, 41%) !default
-$cyan:         hsl(207, 61%,  53%) !default
-$blue:         hsl(229, 53%,  53%) !default
-$purple:       hsl(271, 100%, 71%) !default
-$red:          hsl(348, 86%, 61%) !default
+$orange:        hsl(14,  100%, 53%) !default
+$yellow:        hsl(44,  100%, 77%) !default
+$green:         hsl(153, 53%,  53%) !default
+$turquoise:     hsl(171, 100%, 41%) !default
+$cyan:          hsl(207, 61%,  53%) !default
+$blue:          hsl(229, 53%, 53%) !default
+$purple:        hsl(271, 100%, 71%) !default
+$red:           hsl(348, 86%, 61%) !default
 
 // Typography
 
@@ -38,14 +38,15 @@ $size-5: 1.25rem !default
 $size-6: 1rem !default
 $size-7: 0.75rem !default
 
-$weight-light: 300 !default
-$weight-normal: 400 !default
-$weight-medium: 500 !default
+$weight-light:    300 !default
+$weight-normal:   400 !default
+$weight-medium:   500 !default
 $weight-semibold: 600 !default
-$weight-bold: 700 !default
+$weight-bold:     700 !default
 
 // Spacing
 
+$column-gap:    0.75rem !default
 $block-spacing: 1.5rem !default
 
 // Responsiveness
@@ -66,14 +67,14 @@ $breakpoints: ("mobile": ("until": $tablet), "tablet": ("from": $tablet), "table
 
 // Miscellaneous
 
-$easing: ease-out !default
-$radius-small: 2px !default
-$radius: 4px !default
-$radius-large: 6px !default
+$easing:       ease-out !default
+$speed:            86ms !default
+$radius-small:      2px !default
+$radius:            4px !default
+$radius-large:      6px !default
 $radius-rounded: 9999px !default
-$speed: 86ms !default
 
 // Flags
 
 $variable-columns: true !default
-$rtl: false !default
+$rtl:             false !default
