--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -221,7 +221,7 @@
   +unselectable
   -moz-appearance: none
   -webkit-appearance: none
-  background-color: bulmaRgba($scheme-invert, 0.2)
+  background-color: rgba(var(--scheme-invert), 0.2)
   border: none
   border-radius: $radius-rounded
   cursor: pointer
@@ -241,7 +241,7 @@
   width: 20px
   &::before,
   &::after
-    background-color: $scheme-main
+    background-color: var(--scheme-main)
     content: ""
     display: block
     left: 50%
@@ -257,9 +257,9 @@
     width: 2px
   &:hover,
   &:focus
-    background-color: bulmaRgba($scheme-invert, 0.3)
+    background-color: rgba(var(--scheme-invert), 0.3)
   &:active
-    background-color: bulmaRgba($scheme-invert, 0.4)
+    background-color: rgba(var(--scheme-invert), 0.4)
   // Sizes
   &.is-small
     height: 16px
@@ -285,7 +285,7 @@
 
 =loader
   animation: spinAround 500ms infinite linear
-  border: 2px solid $grey-lighter
+  border: 2px solid var(--grey-lighter)
   border-radius: $radius-rounded
   border-right-color: transparent
   border-top-color: transparent
