--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -1,13 +1,13 @@
 @import "../utilities/mixins"
 
-$breadcrumb-item-color: $link !default
-$breadcrumb-item-hover-color: $link-hover !default
-$breadcrumb-item-active-color: $text-strong !default
+$breadcrumb-item-color: var(--link) !default
+$breadcrumb-item-hover-color: var(--link-hover) !default
+$breadcrumb-item-active-color: var(--text-strong) !default
 
 $breadcrumb-item-padding-vertical: 0 !default
 $breadcrumb-item-padding-horizontal: 0.75em !default
 
-$breadcrumb-item-separator-color: $border-hover !default
+$breadcrumb-item-separator-color: var(--border-hover) !default
 
 .breadcrumb
   @extend %block
