--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,21 +1,21 @@
 @import "../utilities/mixins"
 
-$card-color: $text !default
-$card-background-color: $scheme-main !default
-$card-shadow: $shadow !default
+$card-color: var(--text) !default
+$card-background-color: var(--scheme-main) !default
+$card-shadow: var(--shadow) !default
 $card-radius: 0.25rem !default
 
 $card-header-background-color: transparent !default
-$card-header-color: $text-strong !default
+$card-header-color: var(--text-strong) !default
 $card-header-padding: 0.75rem 1rem !default
-$card-header-shadow: 0 0.125em 0.25em rgba($scheme-invert, 0.1) !default
+$card-header-shadow: 0 0.125em 0.25em rgba(var(--scheme-invert), 0.1) !default
 $card-header-weight: $weight-bold !default
 
 $card-content-background-color: transparent !default
 $card-content-padding: 1.5rem !default
 
 $card-footer-background-color: transparent !default
-$card-footer-border-top: 1px solid $border-light !default
+$card-footer-border-top: 1px solid var(--border-light) !default
 $card-footer-padding: 0.75rem !default
 
 $card-media-margin: $block-spacing !default
