--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,21 +1,21 @@
 @import "../utilities/mixins"
 
-$message-background-color: $background !default
+$message-background-color: var(--background) !default
 $message-radius: $radius !default
 
-$message-header-background-color: $text !default
-$message-header-color: $text-invert !default
+$message-header-background-color: var(--text) !default
+$message-header-color: var(--text-invert) !default
 $message-header-weight: $weight-bold !default
 $message-header-padding: 0.75em 1em !default
 $message-header-radius: $radius !default
 
-$message-body-border-color: $border !default
+$message-body-border-color: var(--border) !default
 $message-body-border-width: 0 0 0 4px !default
-$message-body-color: $text !default
+$message-body-color: var(--text) !default
 $message-body-padding: 1.25em 1.5em !default
 $message-body-radius: $radius !default
 
-$message-body-pre-background-color: $scheme-main !default
+$message-body-pre-background-color: var(--scheme-main) !default
 $message-body-pre-code-background-color: transparent !default
 
 $message-header-body-border-width: 0 !default
