--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -1,47 +1,47 @@
 @import "../utilities/mixins"
 
-$navbar-background-color: $scheme-main !default
+$navbar-background-color: var(--scheme-main) !default
 $navbar-box-shadow-size: 0 2px 0 0 !default
-$navbar-box-shadow-color: $background !default
+$navbar-box-shadow-color: var(--background) !default
 $navbar-height: 3.25rem !default
 $navbar-padding-vertical: 1rem !default
 $navbar-padding-horizontal: 2rem !default
 $navbar-z: 30 !default
 $navbar-fixed-z: 30 !default
 
-$navbar-item-color: $text !default
-$navbar-item-hover-color: $link !default
-$navbar-item-hover-background-color: $scheme-main-bis !default
-$navbar-item-active-color: $scheme-invert !default
+$navbar-item-color: var(--text) !default
+$navbar-item-hover-color: var(--link) !default
+$navbar-item-hover-background-color: var(--scheme-main-bis) !default
+$navbar-item-active-color: var(--scheme-invert) !default
 $navbar-item-active-background-color: transparent !default
 $navbar-item-img-max-height: 1.75rem !default
 
 $navbar-burger-color: $navbar-item-color !default
 
 $navbar-tab-hover-background-color: transparent !default
-$navbar-tab-hover-border-bottom-color: $link !default
-$navbar-tab-active-color: $link !default
+$navbar-tab-hover-border-bottom-color: var(--link) !default
+$navbar-tab-active-color: var(--link) !default
 $navbar-tab-active-background-color: transparent !default
-$navbar-tab-active-border-bottom-color: $link !default
+$navbar-tab-active-border-bottom-color: var(--link) !default
 $navbar-tab-active-border-bottom-style: solid !default
 $navbar-tab-active-border-bottom-width: 3px !default
 
-$navbar-dropdown-background-color: $scheme-main !default
-$navbar-dropdown-border-top: 2px solid $border !default
+$navbar-dropdown-background-color: var(--scheme-main) !default
+$navbar-dropdown-border-top: 2px solid var(--border) !default
 $navbar-dropdown-offset: -4px !default
-$navbar-dropdown-arrow: $link !default
+$navbar-dropdown-arrow: var(--link) !default
 $navbar-dropdown-radius: $radius-large !default
 $navbar-dropdown-z: 20 !default
 
 $navbar-dropdown-boxed-radius: $radius-large !default
-$navbar-dropdown-boxed-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1), 0 0 0 1px bulmaRgba($scheme-invert, 0.1) !default
+$navbar-dropdown-boxed-shadow: 0 8px 8px rgba(var(--scheme-invert), 0.1), 0 0 0 1px rgba(var(--scheme-invert), 0.1) !default
 
-$navbar-dropdown-item-hover-color: $scheme-invert !default
-$navbar-dropdown-item-hover-background-color: $background !default
-$navbar-dropdown-item-active-color: $link !default
-$navbar-dropdown-item-active-background-color: $background !default
+$navbar-dropdown-item-hover-color: var(--scheme-invert) !default
+$navbar-dropdown-item-hover-background-color: var(--background) !default
+$navbar-dropdown-item-active-color: var(--link) !default
+$navbar-dropdown-item-active-background-color: var(--background) !default
 
-$navbar-divider-background-color: $background !default
+$navbar-divider-background-color: var(--background) !default
 $navbar-divider-height: 2px !default
 
 $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default
@@ -249,7 +249,7 @@ a.navbar-item,
       display: none
   .navbar-menu
     background-color: $navbar-background-color
-    box-shadow: 0 8px 16px bulmaRgba($scheme-invert, 0.1)
+    box-shadow: 0 8px 16px rgba(var(--scheme-invert), 0.1)
     padding: 0.5rem 0
     &.is-active
       display: block
@@ -261,7 +261,7 @@ a.navbar-item,
     &.is-fixed-bottom-touch
       bottom: 0
       &.has-shadow
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -2px 3px rgba(var(--scheme-invert), 0.1)
     &.is-fixed-top-touch
       top: 0
     &.is-fixed-top,
@@ -334,7 +334,7 @@ a.navbar-item,
         border-radius: $navbar-dropdown-radius $navbar-dropdown-radius 0 0
         border-top: none
         bottom: 100%
-        box-shadow: 0 -8px 8px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -8px 8px rgba(var(--scheme-invert), 0.1)
         top: auto
     &.is-active,
     &.is-hoverable:focus,
@@ -361,7 +361,7 @@ a.navbar-item,
     border-bottom-left-radius: $navbar-dropdown-radius
     border-bottom-right-radius: $navbar-dropdown-radius
     border-top: $navbar-dropdown-border-top
-    box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1)
+    box-shadow: 0 8px 8px rgba(var(--scheme-invert), 0.1)
     display: none
     font-size: 0.875rem
     +ltr-position(0, false)
@@ -412,7 +412,7 @@ a.navbar-item,
     &.is-fixed-bottom-desktop
       bottom: 0
       &.has-shadow
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -2px 3px rgba(var(--scheme-invert), 0.1)
     &.is-fixed-top-desktop
       top: 0
   html,
