--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,32 +1,32 @@
 @import "../utilities/mixins"
 
-$tabs-border-bottom-color: $border !default
+$tabs-border-bottom-color: var(--border) !default
 $tabs-border-bottom-style: solid !default
 $tabs-border-bottom-width: 1px !default
-$tabs-link-color: $text !default
-$tabs-link-hover-border-bottom-color: $text-strong !default
-$tabs-link-hover-color: $text-strong !default
-$tabs-link-active-border-bottom-color: $link !default
-$tabs-link-active-color: $link !default
+$tabs-link-color: var(--text) !default
+$tabs-link-hover-border-bottom-color: var(--text-strong) !default
+$tabs-link-hover-color: var(--text-strong) !default
+$tabs-link-active-border-bottom-color: var(--link) !default
+$tabs-link-active-color: var(--link) !default
 $tabs-link-padding: 0.5em 1em !default
 
 $tabs-boxed-link-radius: $radius !default
-$tabs-boxed-link-hover-background-color: $background !default
-$tabs-boxed-link-hover-border-bottom-color: $border !default
+$tabs-boxed-link-hover-background-color: var(--background) !default
+$tabs-boxed-link-hover-border-bottom-color: var(--border) !default
 
-$tabs-boxed-link-active-background-color: $scheme-main !default
-$tabs-boxed-link-active-border-color: $border !default
+$tabs-boxed-link-active-background-color: var(--scheme-main) !default
+$tabs-boxed-link-active-border-color: var(--border) !default
 $tabs-boxed-link-active-border-bottom-color: transparent !default
 
-$tabs-toggle-link-border-color: $border !default
+$tabs-toggle-link-border-color: var(--border) !default
 $tabs-toggle-link-border-style: solid !default
 $tabs-toggle-link-border-width: 1px !default
-$tabs-toggle-link-hover-background-color: $background !default
-$tabs-toggle-link-hover-border-color: $border-hover !default
+$tabs-toggle-link-hover-background-color: var(--background) !default
+$tabs-toggle-link-hover-border-color: var(--border-hover) !default
 $tabs-toggle-link-radius: $radius !default
-$tabs-toggle-link-active-background-color: $link !default
-$tabs-toggle-link-active-border-color: $link !default
-$tabs-toggle-link-active-color: $link-invert !default
+$tabs-toggle-link-active-background-color: var(--link) !default
+$tabs-toggle-link-active-border-color: var(--link) !default
+$tabs-toggle-link-active-color: var(--link-invert) !default
 
 .tabs
   @extend %block
