--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,13 +1,13 @@
 @import "../utilities/mixins"
 
-$box-color: $text !default
-$box-background-color: $scheme-main !default
+$box-color: var(--text) !default
+$box-background-color: var(--scheme-main) !default
 $box-radius: $radius-large !default
-$box-shadow: $shadow !default
+$box-shadow: var(--shadow) !default
 $box-padding: 1.25rem !default
 
-$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default
-$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default
+$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba(var(--scheme-invert), 0.1), 0 0 0 1px var(--link) !default
+$box-link-active-shadow: inset 0 1px 2px rgba(var(--scheme-invert), 0.2), 0 0 0 1px var(--link) !default
 
 .box
   @extend %block
