--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,7 +1,7 @@
 @import "../utilities/mixins"
 
-$notification-background-color: $background !default
-$notification-code-background-color: $scheme-main !default
+$notification-background-color: var(--background) !default
+$notification-code-background-color: var(--scheme-main) !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 $notification-padding-ltr: 1.25rem 2.5rem 1.25rem 1.5rem !default
