--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -3,30 +3,30 @@
 
 $form-colors: $colors !default
 
-$input-color: $text-strong !default
-$input-background-color: $scheme-main !default
-$input-border-color: $border !default
+$input-color: var(--text-strong) !default
+$input-background-color: var(--scheme-main) !default
+$input-border-color: var(--border) !default
 $input-height: $control-height !default
-$input-shadow: inset 0 0.0625em 0.125em rgba($scheme-invert, 0.05) !default
+$input-shadow: inset 0 0.0625em 0.125em rgba(var(--scheme-invert), 0.05) !default
 $input-placeholder-color: bulmaRgba($input-color, 0.3) !default
 
-$input-hover-color: $text-strong !default
-$input-hover-border-color: $border-hover !default
+$input-hover-color: var(--text-strong) !default
+$input-hover-border-color: var(--border-hover) !default
 
-$input-focus-color: $text-strong !default
-$input-focus-border-color: $link !default
+$input-focus-color: var(--text-strong) !default
+$input-focus-border-color: var(--link) !default
 $input-focus-box-shadow-size: 0 0 0 0.125em !default
-$input-focus-box-shadow-color: bulmaRgba($link, 0.25) !default
+$input-focus-box-shadow-color: rgba(var(--link), 0.25) !default
 
-$input-disabled-color: $text-light !default
-$input-disabled-background-color: $background !default
-$input-disabled-border-color: $background !default
+$input-disabled-color: var(--text-light) !default
+$input-disabled-background-color: var(--background) !default
+$input-disabled-border-color: var(--background) !default
 $input-disabled-placeholder-color: bulmaRgba($input-disabled-color, 0.3) !default
 
-$input-arrow: $link !default
+$input-arrow: var(--link) !default
 
-$input-icon-color: $border !default
-$input-icon-active-color: $text !default
+$input-icon-color: var(--border) !default
+$input-icon-active-color: var(--text) !default
 
 $input-radius: $radius !default
 
