allow overriding themes using mixins

--- a/sass/themes/light.scss
+++ b/sass/themes/light.scss
@@ -1,7 +1,6 @@
 // Light theme
 
-[data-theme="light"],
-:root:not([data-theme="dark"]) {
+@mixin light-fallback {
   color-scheme: light;
 
   // Colors
