keep default values for inverted basic colors in dark theme

--- a/sass/themes/dark.scss
+++ b/sass/themes/dark.scss
@@ -28,14 +28,14 @@
 
   // Invert colors
 
-  --orange-invert:      #fff;
-  --yellow-invert:      rgba(0, 0, 0, 0.7);
-  --green-invert:       #fff;
-  --turquoise-invert:   #fff;
-  --cyan-invert:        #fff;
-  --blue-invert:        #fff;
-  --purple-invert:      #fff;
-  --red-invert:         #fff;
+  --orange-invert:      #{$orange-invert};
+  --yellow-invert:      #{$yellow-invert};
+  --green-invert:       #{$green-invert};
+  --turquoise-invert:   #{$turquoise-invert};
+  --cyan-invert:        #{$cyan-invert};
+  --blue-invert:        #{$blue-invert};
+  --purple-invert:      #{$purple-invert};
+  --red-invert:         #{$red-invert};
   
   --primary-invert:     #fff;
   --primary-light:      #ebfffc;
